[feat] 完善区块链交易的本地存储
--story==217220411121032
